# vega

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
core/: CMakeLists.txt  core.h  heap.c  heap.h  macros.h  random.c  random.h  timer.c  timer.h  uuid.c  uuid.h
core/debug/: CMakeLists.txt  timer.c  timer.h  tracy.h
core/fs/: fs.c  fs.h
core/math/: constants.h  forward.h  math.h  matrix4.h  quaternion.h  tests.c  tests.h  vector2.h  vector3.c  vector3.h  vector4.h
core/std/: dat.c  dat.h  ecs.c  ecs.h  fdat64.c  fdat64.h  fvector32.c  fvector32.h  fvector64.c  fvector64.h  map.c  map.h  set.c  set.h  string.c  string.h  vector.c  vector.h
engine/: CMakeLists.txt  engine.c  engine.h  scene.c  scene.h
engine/asset/: loader.c  loader.h  material.h  mesh.h  model.h  texture.h
engine/component/: camera.c  camera.h  renderable.c  renderable.h  scene_controller.c  scene_controller.h  transform.c  transform.h  types.h
engine/entity/: CMakeLists.txt  scene_editor.c  scene_editor.h
engine/imgui/: CMakeLists.txt
engine/platform/: event.c  event.h  window.c  window.cpp  window.h
engine/renderer/: material.h  mesh.h  vertex.h
engine/vulkan/: CMakeLists.txt  buffer.c  buffer.h  command_buffer.c  command_buffer.h  command_pool.c  command_pool.h  device.c  device.h  forward.h  image.c  image.h  instance.c  instance.h  pipeline.c  pipeline.h  renderer.c  renderer.cpp  renderer.h  surface.c  surface.h  swap_chain.c  swap_chain.h  vertex.h  vulkan.c  vulkan.h
game/: CMakeLists.txt  game.c  game.cpp  game.h  main.c
shader/: compile.ps1  pbr.frag  pbr.vert
shaders/: compile.ps1  pbr.frag  pbr.vert
